# ai-deep-template-engine

./: .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  FIXED_CONNECTED_GRAPH.md  LANGGRAPH_STUDIO.md  LANGSMITH_ENABLED.md  README.md  STUDIO_MANUAL_CONNECTION.md  STUDIO_RUNNING.md  STUDIO_RUNNING_UPDATED.md  STUDIO_WORKING_URL.md  TUNNEL_ENABLED.md  docker-compose.yml  langgraph.json  pyproject.toml  test_devops_agent.py  visualize_graph.py
.github/workflows/: ci.yml
.harness/: pipeline.yaml
docs/: architecture.md  prompt_adaptation.md  subagents.md
examples/: complete_automation.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  secret.yaml  service.yaml  serviceaccount.yaml
src/deep_agent/: __init__.py  agent_registry.py  cli.py  harness_deep_agent.py  langgraph_integration.py  mcp_runner.py  mcp_server.py  memory_bus.py  studio_graph.py  studio_graph_connected.py  studio_graph_full.py  tool_cache.py
src/deep_agent/core/: __init__.py  graph.py  llm.py  nodes.py  state.py
src/deep_agent/devops/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  RAG_README.md  README.md  SECRETS_GUIDE.md  SERVER_IMPLEMENTATION.md  SERVER_README.md  SETUP_NOTES.md  WORKFLOW_GUIDE.md  __init__.py  agents.py  example_client.py  example_workflow.py  examples.py  observability.py  rag.py  rag_examples.py  secrets.py  server.py  server_requirements.txt  state.py  test_secrets.py  test_server.py  tools.py  workflow.py
tests/: test_agent_registry.py  test_deep_agent.py  test_rag.py  test_search_integrations.py
